add clear button

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			<button class="menu">Square</button>
 			<button class="menu">Quadrilateral</button>
 			<button class="menu">Polygon</button>
+			<button class="menu" name="clear">Clear</button>
 		</div>
 		<canvas id="canvas" height="700" width="1000"></canvas>
 	</body>
