--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
 				background-color: rgb(219, 219, 219);
 			}
 
+			a {
+				text-decoration: none;
+				outline: 0;
+				outline: none;
+			}
+
 			.menu {
 				width: 150px;
 			}
+
 			.menu-container {
 				display: flex;
 			}
@@ -29,16 +36,27 @@
 				padding: 5px;
 				border: 1px solid black;
 			}
+
+			.color-picker {
+				margin: 0 10px;
+			}
 		</style>
 		<div class="menu-container">
-			<button class="menu" name="line">Line</button>
+			<button class="menu" id="line">Line</button>
 			<button class="menu">Square</button>
 			<button class="menu">Quadrilateral</button>
 			<button class="menu">Polygon</button>
-			<button class="menu" name="clear">Clear</button>
-			<div>
+			<div class="color-picker">
 				<label>Pilih warna:</label>
 				<input type="color" id="color-selection" value="#ff0000">
+			</div>
+			<button class="menu" id="clear">Clear</button>
+			<button class="menu" >
+				<a id="download">Download</a>
+			</button>
+			<div>
+				<label for="upload">Upload json file:</label>
+				<input type="file" id="file-input" accept="application/json">
 			</div>
 		</div>
 		<canvas id="canvas" height="700" width="1000"></canvas>
