add draw polygon events

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<button class="menu" id="line">Line</button>
 			<button class="menu">Square</button>
 			<button class="menu">Quadrilateral</button>
-			<button class="menu">Polygon</button>
+			<button class="menu" id="polygon">Polygon</button>
 			<div class="color-picker">
 				<label>Pilih warna:</label>
 				<input type="color" id="color-selection" value="#ff0000">
