drawing & dragging rectangle, square. Refactor handler and css fix

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 			<button class="menu" id="square-button">
 				<img src="/public/icons/square.png" /> <span id="square"> Square </span>
 			</button>
+			<button class="menu" id="rectangle-button">
+				<img src="/public/icons/rectangle.png" /> <span id="rectangle"> Rectangle </span>
+			</button>
 			<button class="menu" id="quadrilateral-button">
 				<img src="/public/icons/quadrilateral.png" />
 				<span id="quadrilateral">Quadrilateral</span>
@@ -63,6 +66,7 @@
 	<script src="/src/utils.js"></script>
 	<script src="/src/mouse.js"></script>
 	<script src="/src/state.js"></script>
+	<script src="/src/buttonHandler.js"></script>
 	<script src="/src/draw.js"></script>
 	<script src="/src/listener.js"></script>
 	<script src="/src/index.js"></script>
